# desktop-2fa

./: .gitignore  BRANDING.md  CHANGELOG.md  CHANGELOG.mg  LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt  vault-backup-1766932402.json  vault-backup-1766932647.json  vault.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish-testpypi.yml  publish_pypi.yml
docs/: cli-ux.md  crypto.md  ux.md
public/: index.html
src/desktop_2fa/: __init__.py  storage.py
src/desktop_2fa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/desktop_2fa/app/: __init__.py  clipboard.py  config.py  main.py
src/desktop_2fa/cli/: __init__.py  commands.py  helpers.py  importers.py  main.py
src/desktop_2fa/crypto/: __init__.py  aesgcm.py  argon2.py
src/desktop_2fa/totp/: __init__.py  generator.py
src/desktop_2fa/ui/: __init__.py  add_token_dialog.py  main_window.py
src/desktop_2fa/ui/resources/: __init__.py
src/desktop_2fa/utils/: __init__.py  time.py
src/desktop_2fa/vault/: __init__.py  model.py  models.py  storage.py  vault.py
tests/: test_cli.py  test_commands.py  test_crypto.py  test_helpers.py  test_importers.py  test_migration.py  test_password.py  test_storage.py  test_totp.py  test_vault.py  test_vault_crypto.py
